--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
     "private": true,
     "scripts": {
         "start": "node server/server.js",
-        "build": "cd client && npm install && npm run build",
-        "postinstall": "cd client && npm install && npm run build"
+        "build": "cd client && npm run build",
+        "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "dependencies": {
-        "dotenv": "^17.2.2",
         "express": "^4.18.2",
         "socket.io": "^4.8.1"
     },
     "engines": {
-        "node": "22.x"
+        "node": "18.x"
     }
 }
