--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "dependencies": {
+        "dotenv": "^17.2.2",
         "express": "^4.18.2",
         "socket.io": "^4.8.1"
     },
