--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "private": true,
     "scripts": {
         "start": "node server/server.js",
-        "build": "cd client && npm run build",
-        "heroku-postbuild": "cd client && npm install && npm run build"
+        "build": "cd client && npm install && npm run build"
     },
     "dependencies": {
         "dotenv": "^17.2.2",
